--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@douganderson444/svelte-solana-name-service",
 	"version": "0.0.3",
 	"main": "dist",
+	"svelte": "src/lib/index.js",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
