--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "@douganderson444/svelte-solana-name-service",
-	"version": "0.0.4",
-	"main": "dist",
+	"version": "0.0.5",
+	"main": "dist/index.js",
+	"module": "dist/index.js",
 	"svelte": "src/lib/index.js",
 	"scripts": {
-		"dev": "svelte-kit dev",
+		"dev": "svelte-kit dev --port 3113",
 		"build": "svelte-kit build",
-		"build:components": "rollup -c",
+		"build:rollup": "rollup -c",
 		"build:solana:web3": "esbuild ./node_modules/@solana/web3.js --bundle --format=esm --main-fields=browser,module,main --define:process.env.NODE_ENV='\"production\"' --splitting --outdir=./src/modules/@solana/web3.js",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
